--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,13 @@
-<%-include("./partials/header")-%>
-  <body class="bg-teal-600 flex justify-center items-center">
-    <main class=" ">
-      <h1 class="text-white font-extrabold text-center text-4xl">Hello World</h1>
-      <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, modi.</p>
-    </main>
+<html lang="en">
 
-  </body>
+<%- include('./partials/head.ejs') %>
+
+<body>
+    <%- include('./partials/nav.ejs') %>
+
+    <div class="content-wrapper">
+    </div>
+
+</body>
+
 </html>
